# Internship-26_Celebal

./: .gitignore  week1_Khushi_Bhagat.ipynb
assignments/: Khushi_Bhagat_week8.ipynb  week2_Khushi_Bhagat.ipynb  week5_Khushi_Bhagat.ipynb
assignments/hireview/: .gitignore  README.md  app.py  debug_retrieval.py  diagnose.py  main.py  pyproject.toml  test_her_jd.py
assignments/hireview/.streamlit/: config.toml
assignments/hireview/notebooks/: 01_eda.py  03_test_scoring.py  04_test_llm.py
assignments/hireview/src/: config.py  dataset_utils.py  graph.py  ingest.py  pdf_utils.py  prompts.py  reingest.py  scoring.py  state.py  vectorstore.py
assignments/hireview/src/agents/: conversation_agent.py  feedback_agent.py  jd_agent.py
assignments/week6_assignment/: week6_Khushi_Bhagat.ipynb
assignments/week7_assignment/: week7_khushi_bhagat.ipynb
assignments/week7_assignment/week7_rag_project/: .env.example  .gitignore  README.md  notebook.ipynb  requirements.txt
assignments/week7_assignment/week7_rag_project/src/: app.py  chatbot.py  vectorstore.py
assignments/week8_assignment/: Khushi_Bhagat_week8.ipynb  Khushi_Bhagat_week8_quiz.md
assignments/week_3rd_assignment/: week3_Khushi_Bhagat.ipynb
